COMP/PA3_/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> classes
Rule 2     classes -> classes class
Rule 3     classes -> empty
Rule 4     class -> CLASS TYPEID inherits { features } ;
Rule 5     inherits -> INHERITS TYPEID
Rule 6     inherits -> empty
Rule 7     features -> features feature
Rule 8     features -> empty
Rule 9     feature -> method ;
Rule 10    feature -> attr ;
Rule 11    method -> OBJECTID ( formals ) : TYPEID { expr }
Rule 12    attr -> OBJECTID : TYPEID
Rule 13    attr -> OBJECTID : TYPEID ASSIGN expr
Rule 14    formals -> formal more_formals
Rule 15    formals -> empty
Rule 16    formal -> OBJECTID : TYPEID
Rule 17    more_formals -> , formal more_formals
Rule 18    more_formals -> empty
Rule 19    expr -> assign
Rule 20    expr -> dispatch
Rule 21    expr -> static_dispatch
Rule 22    expr -> if_expr
Rule 23    expr -> while_expr
Rule 24    expr -> block
Rule 25    expr -> LET let_list IN expr
Rule 26    expr -> case_expr
Rule 27    expr -> bin_op
Rule 28    expr -> un_op
Rule 29    expr -> parens
Rule 30    expr -> ref
Rule 31    assign -> OBJECTID ASSIGN expr
Rule 32    dispatch -> expr . OBJECTID ( actuals )
Rule 33    dispatch -> OBJECTID ( actuals )
Rule 34    static_dispatch -> expr @ TYPEID . OBJECTID ( actuals )
Rule 35    actuals -> expr more_actuals
Rule 36    more_actuals -> , expr more_actuals
Rule 37    more_actuals -> empty
Rule 38    if_expr -> IF expr THEN expr ELSE expr FI
Rule 39    if_expr -> IF expr THEN expr FI
Rule 40    while_expr -> WHILE expr LOOP expr POOL
Rule 41    block -> { expr_list }
Rule 42    parens -> ( expr )
Rule 43    expr_list -> expr ; expr_list
Rule 44    expr_list -> empty
Rule 45    case_expr -> CASE expr OF case_list ESAC
Rule 46    case_list -> case case_list
Rule 47    case_list -> empty
Rule 48    let_list -> OBJECTID : TYPEID more_let
Rule 49    let_list -> OBJECTID : TYPEID ASSIGN expr more_let
Rule 50    more_let -> , OBJECTID : TYPEID more_let
Rule 51    more_let -> , OBJECTID : TYPEID ASSIGN expr more_let
Rule 52    more_let -> empty
Rule 53    case -> OBJECTID : TYPEID DARROW expr ;
Rule 54    bin_op -> plus
Rule 55    bin_op -> sub
Rule 56    bin_op -> mul
Rule 57    bin_op -> div
Rule 58    bin_op -> lt
Rule 59    bin_op -> le
Rule 60    bin_op -> eq
Rule 61    plus -> expr + expr
Rule 62    sub -> expr - expr
Rule 63    mul -> expr * expr
Rule 64    div -> expr / expr
Rule 65    lt -> expr < expr
Rule 66    le -> expr LE expr
Rule 67    eq -> expr = expr
Rule 68    un_op -> neg
Rule 69    un_op -> new
Rule 70    un_op -> isvoid
Rule 71    un_op -> comp
Rule 72    neg -> ~ expr
Rule 73    new -> NEW expr
Rule 74    isvoid -> ISVOID expr
Rule 75    comp -> NOT expr
Rule 76    ref -> object
Rule 77    ref -> int
Rule 78    ref -> string
Rule 79    ref -> bool
Rule 80    object -> OBJECTID
Rule 81    string -> STR_CONST
Rule 82    int -> INT_CONST
Rule 83    bool -> BOOL_CONST
Rule 84    empty -> <empty>

Terminals, with rules where they appear

(                    : 11 32 33 34 42
)                    : 11 32 33 34 42
*                    : 63
+                    : 61
,                    : 17 36 50 51
-                    : 62
.                    : 32 34
/                    : 64
:                    : 11 12 13 16 48 49 50 51 53
;                    : 4 9 10 43 53
<                    : 65
=                    : 67
@                    : 34
ASSIGN               : 13 31 49 51
BOOL_CONST           : 83
CASE                 : 45
CLASS                : 4
DARROW               : 53
ELSE                 : 38
ESAC                 : 45
FI                   : 38 39
IF                   : 38 39
IN                   : 25
INHERITS             : 5
INT_CONST            : 82
ISVOID               : 74
LE                   : 66
LET                  : 25
LOOP                 : 40
NEW                  : 73
NOT                  : 75
OBJECTID             : 11 12 13 16 31 32 33 34 48 49 50 51 53 80
OF                   : 45
POOL                 : 40
STR_CONST            : 81
THEN                 : 38 39
TYPEID               : 4 5 11 12 13 16 34 48 49 50 51 53
WHILE                : 40
error                : 
{                    : 4 11 41
}                    : 4 11 41
~                    : 72

Nonterminals, with rules where they appear

actuals              : 32 33 34
assign               : 19
attr                 : 10
bin_op               : 27
block                : 24
bool                 : 79
case                 : 46
case_expr            : 26
case_list            : 45 46
class                : 2
classes              : 1 2
comp                 : 71
dispatch             : 20
div                  : 57
empty                : 3 6 8 15 18 37 44 47 52
eq                   : 60
expr                 : 11 13 25 31 32 34 35 36 38 38 38 39 39 40 40 42 43 45 49 51 53 61 61 62 62 63 63 64 64 65 65 66 66 67 67 72 73 74 75
expr_list            : 41 43
feature              : 7
features             : 4 7
formal               : 14 17
formals              : 11
if_expr              : 22
inherits             : 4
int                  : 77
isvoid               : 70
le                   : 59
let_list             : 25
lt                   : 58
method               : 9
more_actuals         : 35 36
more_formals         : 14 17
more_let             : 48 49 50 51
mul                  : 56
neg                  : 68
new                  : 69
object               : 76
parens               : 29
plus                 : 54
program              : 0
ref                  : 30
static_dispatch      : 21
string               : 78
sub                  : 55
un_op                : 28
while_expr           : 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . classes
    (2) classes -> . classes class
    (3) classes -> . empty
    (84) empty -> .

    CLASS           reduce using rule 84 (empty -> .)
    $end            reduce using rule 84 (empty -> .)

    classes                        shift and go to state 1
    program                        shift and go to state 2
    empty                          shift and go to state 3

state 1

    (1) program -> classes .
    (2) classes -> classes . class
    (4) class -> . CLASS TYPEID inherits { features } ;

    $end            reduce using rule 1 (program -> classes .)
    CLASS           shift and go to state 4

    class                          shift and go to state 5

state 2

    (0) S' -> program .



state 3

    (3) classes -> empty .

    CLASS           reduce using rule 3 (classes -> empty .)
    $end            reduce using rule 3 (classes -> empty .)


state 4

    (4) class -> CLASS . TYPEID inherits { features } ;

    TYPEID          shift and go to state 6


state 5

    (2) classes -> classes class .

    CLASS           reduce using rule 2 (classes -> classes class .)
    $end            reduce using rule 2 (classes -> classes class .)


state 6

    (4) class -> CLASS TYPEID . inherits { features } ;
    (5) inherits -> . INHERITS TYPEID
    (6) inherits -> . empty
    (84) empty -> .

    INHERITS        shift and go to state 8
    {               reduce using rule 84 (empty -> .)

    inherits                       shift and go to state 7
    empty                          shift and go to state 9

state 7

    (4) class -> CLASS TYPEID inherits . { features } ;

    {               shift and go to state 10


state 8

    (5) inherits -> INHERITS . TYPEID

    TYPEID          shift and go to state 11


state 9

    (6) inherits -> empty .

    {               reduce using rule 6 (inherits -> empty .)


state 10

    (4) class -> CLASS TYPEID inherits { . features } ;
    (7) features -> . features feature
    (8) features -> . empty
    (84) empty -> .

    }               reduce using rule 84 (empty -> .)
    OBJECTID        reduce using rule 84 (empty -> .)

    features                       shift and go to state 12
    empty                          shift and go to state 13

state 11

    (5) inherits -> INHERITS TYPEID .

    {               reduce using rule 5 (inherits -> INHERITS TYPEID .)


state 12

    (4) class -> CLASS TYPEID inherits { features . } ;
    (7) features -> features . feature
    (9) feature -> . method ;
    (10) feature -> . attr ;
    (11) method -> . OBJECTID ( formals ) : TYPEID { expr }
    (12) attr -> . OBJECTID : TYPEID
    (13) attr -> . OBJECTID : TYPEID ASSIGN expr

    }               shift and go to state 17
    OBJECTID        shift and go to state 14

    attr                           shift and go to state 18
    feature                        shift and go to state 15
    method                         shift and go to state 16

state 13

    (8) features -> empty .

    }               reduce using rule 8 (features -> empty .)
    OBJECTID        reduce using rule 8 (features -> empty .)


state 14

    (11) method -> OBJECTID . ( formals ) : TYPEID { expr }
    (12) attr -> OBJECTID . : TYPEID
    (13) attr -> OBJECTID . : TYPEID ASSIGN expr

    (               shift and go to state 19
    :               shift and go to state 20


state 15

    (7) features -> features feature .

    }               reduce using rule 7 (features -> features feature .)
    OBJECTID        reduce using rule 7 (features -> features feature .)


state 16

    (9) feature -> method . ;

    ;               shift and go to state 21


state 17

    (4) class -> CLASS TYPEID inherits { features } . ;

    ;               shift and go to state 22


state 18

    (10) feature -> attr . ;

    ;               shift and go to state 23


state 19

    (11) method -> OBJECTID ( . formals ) : TYPEID { expr }
    (14) formals -> . formal more_formals
    (15) formals -> . empty
    (16) formal -> . OBJECTID : TYPEID
    (84) empty -> .

    OBJECTID        shift and go to state 24
    )               reduce using rule 84 (empty -> .)

    formal                         shift and go to state 25
    empty                          shift and go to state 26
    formals                        shift and go to state 27

state 20

    (12) attr -> OBJECTID : . TYPEID
    (13) attr -> OBJECTID : . TYPEID ASSIGN expr

    TYPEID          shift and go to state 28


state 21

    (9) feature -> method ; .

    }               reduce using rule 9 (feature -> method ; .)
    OBJECTID        reduce using rule 9 (feature -> method ; .)


state 22

    (4) class -> CLASS TYPEID inherits { features } ; .

    CLASS           reduce using rule 4 (class -> CLASS TYPEID inherits { features } ; .)
    $end            reduce using rule 4 (class -> CLASS TYPEID inherits { features } ; .)


state 23

    (10) feature -> attr ; .

    }               reduce using rule 10 (feature -> attr ; .)
    OBJECTID        reduce using rule 10 (feature -> attr ; .)


state 24

    (16) formal -> OBJECTID . : TYPEID

    :               shift and go to state 29


state 25

    (14) formals -> formal . more_formals
    (17) more_formals -> . , formal more_formals
    (18) more_formals -> . empty
    (84) empty -> .

    ,               shift and go to state 31
    )               reduce using rule 84 (empty -> .)

    empty                          shift and go to state 30
    more_formals                   shift and go to state 32

state 26

    (15) formals -> empty .

    )               reduce using rule 15 (formals -> empty .)


state 27

    (11) method -> OBJECTID ( formals . ) : TYPEID { expr }

    )               shift and go to state 33


state 28

    (12) attr -> OBJECTID : TYPEID .
    (13) attr -> OBJECTID : TYPEID . ASSIGN expr

    ;               reduce using rule 12 (attr -> OBJECTID : TYPEID .)
    ASSIGN          shift and go to state 34


state 29

    (16) formal -> OBJECTID : . TYPEID

    TYPEID          shift and go to state 35


state 30

    (18) more_formals -> empty .

    )               reduce using rule 18 (more_formals -> empty .)


state 31

    (17) more_formals -> , . formal more_formals
    (16) formal -> . OBJECTID : TYPEID

    OBJECTID        shift and go to state 24

    formal                         shift and go to state 36

state 32

    (14) formals -> formal more_formals .

    )               reduce using rule 14 (formals -> formal more_formals .)


state 33

    (11) method -> OBJECTID ( formals ) . : TYPEID { expr }

    :               shift and go to state 37


state 34

    (13) attr -> OBJECTID : TYPEID ASSIGN . expr
    (19) expr -> . assign
    (20) expr -> . dispatch
    (21) expr -> . static_dispatch
    (22) expr -> . if_expr
    (23) expr -> . while_expr
    (24) expr -> . block
    (25) expr -> . LET let_list IN expr
    (26) expr -> . case_expr
    (27) expr -> . bin_op
    (28) expr -> . un_op
    (29) expr -> . parens
    (30) expr -> . ref
    (31) assign -> . OBJECTID ASSIGN expr
    (32) dispatch -> . expr . OBJECTID ( actuals )
    (33) dispatch -> . OBJECTID ( actuals )
    (34) static_dispatch -> . expr @ TYPEID . OBJECTID ( actuals )
    (38) if_expr -> . IF expr THEN expr ELSE expr FI
    (39) if_expr -> . IF expr THEN expr FI
    (40) while_expr -> . WHILE expr LOOP expr POOL
    (41) block -> . { expr_list }
    (45) case_expr -> . CASE expr OF case_list ESAC
    (54) bin_op -> . plus
    (55) bin_op -> . sub
    (56) bin_op -> . mul
    (57) bin_op -> . div
    (58) bin_op -> . lt
    (59) bin_op -> . le
    (60) bin_op -> . eq
    (68) un_op -> . neg
    (69) un_op -> . new
    (70) un_op -> . isvoid
    (71) un_op -> . comp
    (42) parens -> . ( expr )
    (76) ref -> . object
    (77) ref -> . int
    (78) ref -> . string
    (79) ref -> . bool
    (61) plus -> . expr + expr
    (62) sub -> . expr - expr
    (63) mul -> . expr * expr
    (64) div -> . expr / expr
    (65) lt -> . expr < expr
    (66) le -> . expr LE expr
    (67) eq -> . expr = expr
    (72) neg -> . ~ expr
    (73) new -> . NEW expr
    (74) isvoid -> . ISVOID expr
    (75) comp -> . NOT expr
    (80) object -> . OBJECTID
    (82) int -> . INT_CONST
    (81) string -> . STR_CONST
    (83) bool -> . BOOL_CONST

    LET             shift and go to state 74
    OBJECTID        shift and go to state 61
    IF              shift and go to state 68
    WHILE           shift and go to state 42
    {               shift and go to state 75
    CASE            shift and go to state 47
    (               shift and go to state 52
    ~               shift and go to state 78
    NEW             shift and go to state 45
    ISVOID          shift and go to state 48
    NOT             shift and go to state 65
    INT_CONST       shift and go to state 49
    STR_CONST       shift and go to state 38
    BOOL_CONST      shift and go to state 44

    case_expr                      shift and go to state 39
    int                            shift and go to state 40
    dispatch                       shift and go to state 41
    un_op                          shift and go to state 43
    eq                             shift and go to state 46
    le                             shift and go to state 50
    sub                            shift and go to state 51
    neg                            shift and go to state 72
    isvoid                         shift and go to state 53
    lt                             shift and go to state 54
    bool                           shift and go to state 55
    comp                           shift and go to state 56
    mul                            shift and go to state 66
    ref                            shift and go to state 58
    parens                         shift and go to state 59
    string                         shift and go to state 60
    while_expr                     shift and go to state 62
    object                         shift and go to state 63
    new                            shift and go to state 64
    if_expr                        shift and go to state 69
    static_dispatch                shift and go to state 70
    expr                           shift and go to state 71
    bin_op                         shift and go to state 73
    plus                           shift and go to state 57
    div                            shift and go to state 67
    assign                         shift and go to state 76
    block                          shift and go to state 77

state 35

    (16) formal -> OBJECTID : TYPEID .

    ,               reduce using rule 16 (formal -> OBJECTID : TYPEID .)
    )               reduce using rule 16 (formal -> OBJECTID : TYPEID .)


state 36

    (17) more_formals -> , formal . more_formals
    (17) more_formals -> . , formal more_formals
    (18) more_formals -> . empty
    (84) empty -> .

    ,               shift and go to state 31
    )               reduce using rule 84 (empty -> .)

    empty                          shift and go to state 30
    more_formals                   shift and go to state 79

state 37

    (11) method -> OBJECTID ( formals ) : . TYPEID { expr }

    TYPEID          shift and go to state 80


state 38

    (81) string -> STR_CONST .

    POOL            reduce using rule 81 (string -> STR_CONST .)
    .               reduce using rule 81 (string -> STR_CONST .)
    @               reduce using rule 81 (string -> STR_CONST .)
    +               reduce using rule 81 (string -> STR_CONST .)
    -               reduce using rule 81 (string -> STR_CONST .)
    *               reduce using rule 81 (string -> STR_CONST .)
    /               reduce using rule 81 (string -> STR_CONST .)
    <               reduce using rule 81 (string -> STR_CONST .)
    LE              reduce using rule 81 (string -> STR_CONST .)
    =               reduce using rule 81 (string -> STR_CONST .)
    ;               reduce using rule 81 (string -> STR_CONST .)
    LOOP            reduce using rule 81 (string -> STR_CONST .)
    OF              reduce using rule 81 (string -> STR_CONST .)
    )               reduce using rule 81 (string -> STR_CONST .)
    THEN            reduce using rule 81 (string -> STR_CONST .)
    ,               reduce using rule 81 (string -> STR_CONST .)
    }               reduce using rule 81 (string -> STR_CONST .)
    ELSE            reduce using rule 81 (string -> STR_CONST .)
    FI              reduce using rule 81 (string -> STR_CONST .)
    IN              reduce using rule 81 (string -> STR_CONST .)


state 39

    (26) expr -> case_expr .

    .               reduce using rule 26 (expr -> case_expr .)
    @               reduce using rule 26 (expr -> case_expr .)
    +               reduce using rule 26 (expr -> case_expr .)
    -               reduce using rule 26 (expr -> case_expr .)
    *               reduce using rule 26 (expr -> case_expr .)
    /               reduce using rule 26 (expr -> case_expr .)
    <               reduce using rule 26 (expr -> case_expr .)
    LE              reduce using rule 26 (expr -> case_expr .)
    =               reduce using rule 26 (expr -> case_expr .)
    ;               reduce using rule 26 (expr -> case_expr .)
    LOOP            reduce using rule 26 (expr -> case_expr .)
    OF              reduce using rule 26 (expr -> case_expr .)
    )               reduce using rule 26 (expr -> case_expr .)
    THEN            reduce using rule 26 (expr -> case_expr .)
    ,               reduce using rule 26 (expr -> case_expr .)
    }               reduce using rule 26 (expr -> case_expr .)
    POOL            reduce using rule 26 (expr -> case_expr .)
    ELSE            reduce using rule 26 (expr -> case_expr .)
    FI              reduce using rule 26 (expr -> case_expr .)
    IN              reduce using rule 26 (expr -> case_expr .)


state 40

    (77) ref -> int .

    .               reduce using rule 77 (ref -> int .)
    @               reduce using rule 77 (ref -> int .)
    +               reduce using rule 77 (ref -> int .)
    -               reduce using rule 77 (ref -> int .)
    *               reduce using rule 77 (ref -> int .)
    /               reduce using rule 77 (ref -> int .)
    <               reduce using rule 77 (ref -> int .)
    LE              reduce using rule 77 (ref -> int .)
    =               reduce using rule 77 (ref -> int .)
    ;               reduce using rule 77 (ref -> int .)
    LOOP            reduce using rule 77 (ref -> int .)
    OF              reduce using rule 77 (ref -> int .)
    )               reduce using rule 77 (ref -> int .)
    THEN            reduce using rule 77 (ref -> int .)
    ,               reduce using rule 77 (ref -> int .)
    }               reduce using rule 77 (ref -> int .)
    POOL            reduce using rule 77 (ref -> int .)
    ELSE            reduce using rule 77 (ref -> int .)
    FI              reduce using rule 77 (ref -> int .)
    IN              reduce using rule 77 (ref -> int .)


state 41

    (20) expr -> dispatch .

    .               reduce using rule 20 (expr -> dispatch .)
    @               reduce using rule 20 (expr -> dispatch .)
    +               reduce using rule 20 (expr -> dispatch .)
    -               reduce using rule 20 (expr -> dispatch .)
    *               reduce using rule 20 (expr -> dispatch .)
    /               reduce using rule 20 (expr -> dispatch .)
    <               reduce using rule 20 (expr -> dispatch .)
    LE              reduce using rule 20 (expr -> dispatch .)
    =               reduce using rule 20 (expr -> dispatch .)
    ;               reduce using rule 20 (expr -> dispatch .)
    LOOP            reduce using rule 20 (expr -> dispatch .)
    OF              reduce using rule 20 (expr -> dispatch .)
    )               reduce using rule 20 (expr -> dispatch .)
    THEN            reduce using rule 20 (expr -> dispatch .)
    ,               reduce using rule 20 (expr -> dispatch .)
    }               reduce using rule 20 (expr -> dispatch .)
    POOL            reduce using rule 20 (expr -> dispatch .)
    ELSE            reduce using rule 20 (expr -> dispatch .)
    FI              reduce using rule 20 (expr -> dispatch .)
    IN              reduce using rule 20 (expr -> dispatch .)


state 42

    (40) while_expr -> WHILE . expr LOOP expr POOL
    (19) expr -> . assign
    (20) expr -> . dispatch
    (21) expr -> . static_dispatch
    (22) expr -> . if_expr
    (23) expr -> . while_expr
    (24) expr -> . block
    (25) expr -> . LET let_list IN expr
    (26) expr -> . case_expr
    (27) expr -> . bin_op
    (28) expr -> . un_op
    (29) expr -> . parens
    (30) expr -> . ref
    (31) assign -> . OBJECTID ASSIGN expr
    (32) dispatch -> . expr . OBJECTID ( actuals )
    (33) dispatch -> . OBJECTID ( actuals )
    (34) static_dispatch -> . expr @ TYPEID . OBJECTID ( actuals )
    (38) if_expr -> . IF expr THEN expr ELSE expr FI
    (39) if_expr -> . IF expr THEN expr FI
    (40) while_expr -> . WHILE expr LOOP expr POOL
    (41) block -> . { expr_list }
    (45) case_expr -> . CASE expr OF case_list ESAC
    (54) bin_op -> . plus
    (55) bin_op -> . sub
    (56) bin_op -> . mul
    (57) bin_op -> . div
    (58) bin_op -> . lt
    (59) bin_op -> . le
    (60) bin_op -> . eq
    (68) un_op -> . neg
    (69) un_op -> . new
    (70) un_op -> . isvoid
    (71) un_op -> . comp
    (42) parens -> . ( expr )
    (76) ref -> . object
    (77) ref -> . int
    (78) ref -> . string
    (79) ref -> . bool
    (61) plus -> . expr + expr
    (62) sub -> . expr - expr
    (63) mul -> . expr * expr
    (64) div -> . expr / expr
    (65) lt -> . expr < expr
    (66) le -> . expr LE expr
    (67) eq -> . expr = expr
    (72) neg -> . ~ expr
    (73) new -> . NEW expr
    (74) isvoid -> . ISVOID expr
    (75) comp -> . NOT expr
    (80) object -> . OBJECTID
    (82) int -> . INT_CONST
    (81) string -> . STR_CONST
    (83) bool -> . BOOL_CONST

    LET             shift and go to state 74
    OBJECTID        shift and go to state 61
    IF              shift and go to state 68
    WHILE           shift and go to state 42
    {               shift and go to state 75
    CASE            shift and go to state 47
    (               shift and go to state 52
    ~               shift and go to state 78
    NEW             shift and go to state 45
    ISVOID          shift and go to state 48
    NOT             shift and go to state 65
    INT_CONST       shift and go to state 49
    STR_CONST       shift and go to state 38
    BOOL_CONST      shift and go to state 44
